--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -1,3 +1,107 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+.chat-main {
+  display: flex;
+  justify-content: start;
+  min-height: 100vh;
+  background-color: black;
+  color: white;
+  font-family: 'Courier New';
+  font-size: 16px; }
+
+.chat-container {
+  max-width: 40vw; }
+  .chat-container .chatbar {
+    background-color: black;
+    border-top: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    align-content: center;
+    justify-content: center; }
+    .chat-container .chatbar .chatbar-message,
+    .chat-container .chatbar .chatbar-username {
+      opacity: 0.8;
+      border: 1px solid black;
+      border-radius: 5px;
+      display: flex;
+      height: 40px;
+      line-height: 40px;
+      margin: 5px;
+      padding: 0 9px; }
+
+.chatbar-info {
+  display: none; }
+
+.messages-container {
+  display: flex; }
+  .messages-container .message-list-container {
+    margin: 5px; }
+
+.messages {
+  background-color: rgba(226, 226, 226, 0.486);
+  border: 1px solid rgba(155, 155, 155, 0.5);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding: 0.5rem;
+  margin: 0.5rem 0rem 2rem 0rem; }
+
+.message-system {
+  width: 100%;
+  padding: 5px 20px; }
+
+.messages-content,
+.message-username {
+  overflow: hidden;
+  margin: 5px;
+  padding: 0 10px; }
+
+.messages-content {
+  flex: 8; }
+
+.message-username {
+  flex: 2;
+  font-weight: 700; }
+
+.notifications {
+  font-style: italic;
+  margin: 1rem 1rem 2rem 3rem; }
+
+.navbar {
+  background-color: black;
+  border-bottom: 1px solid black;
+  height: 60px;
+  padding: 0 10px;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  left: 0;
+  right: 0;
+  top: 0; }
+  .navbar .user-count {
+    color: inherit;
+    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.6);
+    opacity: 0.8;
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-right: 2rem;
+    padding: 0 10px; }
+
+.navbar-brand {
+  color: inherit;
+  display: flex;
+  font-weight: 700;
+  font-size: 2.5rem;
+  letter-spacing: 3px;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.6);
+  height: 60px;
+  line-height: 60px;
+  padding: 0 10px;
+  margin-left: 2rem;
+  text-decoration: none; }
+
 body {
   margin: 0;
   padding: 0;
@@ -9,7 +113,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
 
 .App {
-  text-align: center; }
+  min-height: 100vh; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
