--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -1,3 +1,6 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+@import 'partials/chat';
+
 body {
   margin: 0;
   padding: 0;
@@ -15,7 +18,7 @@ code {
 
 
 .App {
-  text-align: center;
+  min-height: 100vh;
 }
 
 .App-logo {
