--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -65,7 +65,7 @@
   font-weight: 700; }
 
 .notifications {
-  font-style: italic;
+  font-weight: 600;
   margin: 1rem 1rem 2rem 3rem; }
 
 .navbar {
