themes imported, theme selector added

--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -8,8 +8,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace; }
 
-.App {
-  text-align: center; }
+/* .App {
+  text-align: center; } */
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
