fixed styling and function of chat

--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -1,5 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
 .chat-main {
+  overflow: hidden;
   display: flex;
   justify-content: start;
   min-height: 100vh;
@@ -9,13 +10,21 @@
   font-size: 16px; }
 
 .chat-container {
-  max-width: 40vw; }
+  min-height: 100vh;
+  max-width: 40vw;
+  display: flex;
+  flex-direction: column-reverse; }
   .chat-container .chatbar {
+    flex-grow: 1;
     background-color: black;
     border-top: 1px solid black;
     display: flex;
     flex-direction: column;
-    padding: 5px;
+    padding: 0.5rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     align-content: center;
     justify-content: center; }
     .chat-container .chatbar .chatbar-message,
@@ -24,83 +33,46 @@
       border: 1px solid black;
       border-radius: 5px;
       display: flex;
-      height: 40px;
-      line-height: 40px;
+      height: 2.5rem;
+      line-height: 2.5rem;
       margin: 5px;
-      padding: 0 9px; }
-
-.chatbar-info {
-  display: none; }
-
-.messages-container {
-  display: flex; }
-  .messages-container .message-list-container {
-    margin: 5px; }
-
-.messages {
-  background-color: rgba(226, 226, 226, 0.486);
-  border: 1px solid rgba(155, 155, 155, 0.5);
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  padding: 0.5rem;
-  margin: 0.5rem 0rem 2rem 0rem; }
-
-.message-system {
-  width: 100%;
-  padding: 5px 20px; }
-
-.messages-content,
-.message-username {
-  overflow: hidden;
-  margin: 5px;
-  padding: 0 10px; }
-
-.messages-content {
-  flex: 8; }
-
-.message-username {
-  flex: 2;
-  font-weight: 700; }
-
-.notifications {
-  font-weight: 600;
-  margin: 1rem 1rem 2rem 3rem; }
-
-.navbar {
-  background-color: black;
-  border-bottom: 1px solid black;
-  height: 60px;
-  padding: 0 10px;
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-content: center;
-  left: 0;
-  right: 0;
-  top: 0; }
-  .navbar .user-count {
-    color: inherit;
-    text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.6);
-    opacity: 0.8;
-    font-weight: 600;
-    font-size: 1.25rem;
-    margin-right: 2rem;
-    padding: 0 10px; }
-
-.navbar-brand {
-  color: inherit;
-  display: flex;
-  font-weight: 700;
-  font-size: 2.5rem;
-  letter-spacing: 3px;
-  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.6);
-  height: 60px;
-  line-height: 60px;
-  padding: 0 10px;
-  margin-left: 2rem;
-  text-decoration: none; }
+      padding: 0 0.5rem; }
+  .chat-container .messages-container {
+    min-height: 100vh;
+    max-height: 100vh;
+    display: flex;
+    position: relative; }
+    .chat-container .messages-container .message-system {
+      display: flex;
+      flex-direction: column; }
+      .chat-container .messages-container .message-system .message-list-container {
+        display: flex;
+        flex-direction: column-reverse;
+        overflow-y: auto;
+        scroll-behavior: smooth;
+        margin: 1rem 1rem 10rem 1rem; }
+        .chat-container .messages-container .message-system .message-list-container .unreverse {
+          flex-direction: column; }
+          .chat-container .messages-container .message-system .message-list-container .unreverse .messages {
+            display: block;
+            padding: 0.5rem;
+            margin: 0.5rem 0rem; }
+          .chat-container .messages-container .message-system .message-list-container .unreverse .message-system {
+            width: 100%;
+            padding: 5px 20px; }
+          .chat-container .messages-container .message-system .message-list-container .unreverse .messages-content,
+          .chat-container .messages-container .message-system .message-list-container .unreverse .message-username {
+            overflow: hidden;
+            margin: 5px;
+            padding: 0 10px; }
+          .chat-container .messages-container .message-system .message-list-container .unreverse .messages-content {
+            flex: 8; }
+          .chat-container .messages-container .message-system .message-list-container .unreverse .message-username {
+            flex: 2;
+            font-weight: 700; }
+          .chat-container .messages-container .message-system .message-list-container .unreverse .notifications {
+            font-weight: 600;
+            margin: 1rem 1rem 2rem 3rem; }
 
 body {
   margin: 0;
