--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -14,9 +14,9 @@ code {
 }
 
 
-.App {
-  text-align: center;
-}
+// .App {
+//   text-align: center;
+// }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
