--- a/client/src/styles/scss/partials/_chat.scss
+++ b/client/src/styles/scss/partials/_chat.scss
@@ -1,15 +1,17 @@
 .chat-main {
+  position: relative;
+  height: 100%;
+  width: 100%; 
   overflow: hidden;
   display: flex;
   justify-content: start;
-  min-height: 100vh;
   background-color: black;
   color: white;
   font-family: 'Courier New';
-  font-size: 16px;
+  font-size: 12px;
+
 }
 .chat-container {
-  min-height: 100vh;
   display: flex;
   flex-direction: column-reverse;
 
@@ -33,16 +35,16 @@
       border: 1px solid black;
       border-radius: 5px;
       display: flex;
-      height: 2.5rem;
+      height: 1.5rem;
       line-height: 2.5rem;
-      margin: 5px;
+      margin: 1px;
       padding: 0 0.5rem;
     }
   }
 
   .messages-container {
-    min-height: 100vh;
-    max-height: 100vh;
+    min-height: 50vh;
+    max-height: 50vh;
     display: flex;
     position: relative;
     
@@ -54,15 +56,14 @@
         flex-direction: column-reverse;
         overflow-y: auto;
         scroll-behavior: smooth;
-        margin: 1rem 1rem 10rem 1rem;
+        margin: 0.1rem 0.1rem 0.1rem 0.1rem;
         
         .unreverse {
           flex-direction: column;
           .messages {
             display: block;
-  
-            padding: 0.5rem;
-            margin: 0.5rem 0rem;
+            padding: 0.2rem;
+            margin: 0rem 0rem;
           }
           
           .message-system {
