--- a/client/src/styles/scss/partials/_fileViewer.scss
+++ b/client/src/styles/scss/partials/_fileViewer.scss
@@ -1,28 +1,29 @@
 .file-container {
   display: flex;
   flex-direction: column;
-  min-height:100vh;
-  min-width: 50vw;
+
+
 
   .ReactCodeMirror, .CodeMirror {
-    height: 95vh;
+
   }
 
   .theme-select-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100px;
     background-color: rgba(0,0,0,0.6);
     
     .select-text {
       color: #EEE;
-      padding: 1rem;
-      margin: 0rem 1rem;
+      padding: 0rem;
+      margin: 0rem;
     }
     .theme-select {
-      padding: 1rem;
-      margin: 1rem;
+      padding: 0.5rem;
+      margin: 0.5rem;
     }
   }
 }
