--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -37,7 +37,7 @@ code {
       height: 100%;
       width: 100%; 
       grid-area: Filetree;
-      background-color: red;
+      background-color: grey;
 
     }
 
