script to render multiple cardds in state

--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -24,7 +24,7 @@ code {
   flex-direction: column;
   height: 80vh;
   width: 100vw;
-  background-color: black;
+  // background-color: black;
 
   .component-container1 {
     display: grid;
