--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -2,6 +2,7 @@
 @import 'partials/chat';
 @import 'partials/fileViewer';
 @import 'partials/video';
+@import 'partials/_ScheduledStreamCard';
 
 body {
   margin: 0;
