--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -97,6 +97,24 @@
   width: 100%;
   height: 52vh; }
 
+main .currentStream {
+  border: 2px solid black;
+  background-color: aquamarine;
+  width: 75%;
+  margin: 2em 2em; }
+  main .currentStream .currentStreamBanner {
+    display: flex;
+    justify-content: space-between; }
+    main .currentStream .currentStreamBanner h3 {
+      font-size: 2em;
+      margin-left: 2em; }
+    main .currentStream .currentStreamBanner h5 {
+      font-size: 1.2em;
+      margin-right: 10em; }
+  main .currentStream p {
+    font-size: 1em;
+    margin: 2em; }
+
 body {
   margin: 0;
   padding: 0;
