--- a/client/src/styles/scss/partials/__ScheduledStreamCard.scss
+++ b/client/src/styles/scss/partials/__ScheduledStreamCard.scss
@@ -15,6 +15,9 @@ main {
         font-size: 2em;
         margin-left:1em;
       }
+      h4 {
+        font-size: 1.5em;
+      }
       h5 {
         font-size: 1.2em;
         margin-right: 10em;
