--- a/client/src/styles/scss/partials/__activeStreamsCard.scss
+++ b/client/src/styles/scss/partials/__activeStreamsCard.scss
@@ -1,27 +1,52 @@
 
 .streams {
+  display:         flex;
+  flex-direction:  row;
+  flex-wrap:       wrap;
+  justify-content: space-around;
+
 
   .activeStreamCard {
 
+    border: 2px solid black;
+    background-color: salmon;
+    width: 25vw;
+    height:25vw;
+    margin:3em;
+
     .banner {
+      display:flex;
+      justify-content: space-between;
+      height: 3
 
       div{
+        margin: 1em; 
 
         h1 {
-
+          font-size: 2.2em;
+          margin: 0;
         }
         h2 {
-
+          font-size: 1.5em;
+          margin: 0;
         }
       }
       img {
 
       }
+      .imagePlaceholder {
+        
+        width: 4em;
+        height: 4em;
+        margin: 1em; 
+        background-color:black;
+      }
     }
     .description-container {
-
+      margin: 1em; 
+      
       p {
-
+        font-size: 1.2em;
       }
     }
   }
