--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -128,10 +128,11 @@ main .currentStream {
     width: 25vw;
     height: 25vw;
     margin: 3em; }
+    .streams .activeStreamCard:hover {
+      opacity: 0.5; }
     .streams .activeStreamCard .banner {
       display: flex;
-      justify-content: space-between;
-      height: 30%; }
+      justify-content: space-between; }
       .streams .activeStreamCard .banner div {
         margin: 1em; }
         .streams .activeStreamCard .banner div h1 {
@@ -146,11 +147,9 @@ main .currentStream {
         margin: 1em;
         background-color: black; }
     .streams .activeStreamCard .description-container {
-      margin: 1em;
-      height: 70%; }
+      margin: 1em; }
       .streams .activeStreamCard .description-container p {
-        font-size: 1.2em;
-        overflow-y: scroll; }
+        font-size: 1.2em; }
 
 html {
   box-sizing: border-box;
