--- a/client/src/styles/scss/partials/__activeStreamsCard.scss
+++ b/client/src/styles/scss/partials/__activeStreamsCard.scss
@@ -13,7 +13,10 @@
     width: 25vw;
     height:25vw;
     margin:3em;
-   
+    &:hover {
+      opacity: 0.5;
+    }
+
     .banner {
       display:flex;
       justify-content: space-between;
