scripting to build cards, display id in console, and css

--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -4,6 +4,7 @@
 @import 'partials/video';
 @import 'partials/_scheduledStreamCard';
 @import 'partials/_activeStreamsCard';
+@import 'partials/_archivedStreamsCards';
 
 html {
   box-sizing: border-box;
