--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -151,6 +151,43 @@ main .currentStream {
       .streams .activeStreamCard .description-container p {
         font-size: 1.2em; }
 
+.streams {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+  .streams .archievedStreamCard {
+    border: 2px solid black;
+    background-color: khaki;
+    width: 25vw;
+    height: 25vw;
+    margin: 3em; }
+    .streams .archievedStreamCard:hover {
+      opacity: 0.5; }
+    .streams .archievedStreamCard .banner {
+      display: flex;
+      justify-content: space-between; }
+      .streams .archievedStreamCard .banner div {
+        margin: 1em; }
+        .streams .archievedStreamCard .banner div h1 {
+          font-size: 2.2em;
+          margin: 0; }
+        .streams .archievedStreamCard .banner div h2 {
+          font-size: 1.5em;
+          margin: 0; }
+        .streams .archievedStreamCard .banner div h3 {
+          font-size: 1.2em;
+          margin: 0; }
+      .streams .archievedStreamCard .banner .imagePlaceholder {
+        width: 4em;
+        height: 4em;
+        margin: 1em;
+        background-color: black; }
+    .streams .archievedStreamCard .description-container {
+      margin: 1em; }
+      .streams .archievedStreamCard .description-container p {
+        font-size: 1.2em; }
+
 html {
   box-sizing: border-box;
   font-size: 16px; }
