--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -78,14 +78,14 @@ code {
       grid-area: Code;
     }
 
-    .Terminal-display {
-      position: relative;
-      height: 100%;
-      width: 100%; 
-      display: flex;
-      grid-area: Terminal;
-      background-color: grey;
-    }
+    // .Terminal-display {
+    //   position: relative;
+    //   height: 100%;
+    //   width: 100%; 
+    //   display: flex;
+    //   grid-area: Terminal;
+    //   background-color: grey;
+    // }
   }
 }
 
