mounted terminal with refs properly. wrapper for terminal.

--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -151,6 +151,11 @@ main .currentStream {
       .streams .activeStreamCard .description-container p {
         font-size: 1.2em; }
 
+.wrapper {
+  position: relative;
+  display: flex;
+  flex-wrap: nowrap; }
+
 html {
   box-sizing: border-box;
   font-size: 16px; }
@@ -199,13 +204,13 @@ code {
       height: 100%;
       width: 100%;
       grid-area: Code; }
-    /* .App .component-container2 .Terminal-display {
+    .App .component-container2 .Terminal-display {
       position: relative;
       height: 100%;
       width: 100%;
       display: flex;
       grid-area: Terminal;
-      background-color: grey; } */
+      background-color: grey; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
