--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -2,8 +2,9 @@
 @import 'partials/chat';
 @import 'partials/fileViewer';
 @import 'partials/video';
-@import 'partials/_scheduledStreamCard';
-@import 'partials/_activeStreamsCard';
+@import 'partials/scheduledStreamCard';
+@import 'partials/activeStreamsCard';
+@import 'partials/terminal';
 
 html {
   box-sizing: border-box;
@@ -78,14 +79,14 @@ code {
       grid-area: Code;
     }
 
-    // .Terminal-display {
-    //   position: relative;
-    //   height: 100%;
-    //   width: 100%; 
-    //   display: flex;
-    //   grid-area: Terminal;
-    //   background-color: grey;
-    // }
+    .Terminal-display {
+      position: relative;
+      height: 100%;
+      width: 100%; 
+      display: flex;
+      grid-area: Terminal;
+      background-color: grey;
+    }
   }
 }
 
