--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -5,6 +5,7 @@
 @import 'partials/scheduledStreamCard';
 @import 'partials/activeStreamsCard';
 @import 'partials/terminal';
+@import 'partials/fileDirectory';
 
 html {
   box-sizing: border-box;
