--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -76,13 +76,19 @@
 
 .file-container {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  min-height: 100%; }
+  .file-container .react-codemirror2 {
+    position: relative;
+    min-height: 100%; }
+    .file-container .react-codemirror2 .CodeMirror {
+      min-height: 40vh; }
   .file-container .theme-select-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    height: 8vh;
     background-color: rgba(0, 0, 0, 0.6); }
     .file-container .theme-select-container .select-text {
       color: #EEE;
@@ -155,6 +161,10 @@ main .currentStream {
   position: relative;
   display: flex;
   flex-wrap: nowrap; }
+  .wrapper canvas[class^="xterm-"] {
+    display: flex;
+    min-width: 50vw !important;
+    min-height: 48vh; }
 
 html {
   box-sizing: border-box;
@@ -172,8 +182,9 @@ code {
 
 .App {
   flex-direction: column;
-  height: 80vh;
-  width: 100vw; }
+  min-height: 100vh;
+  min-width: 100vw;
+  overflow: hidden; }
   .App .component-container1 {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -196,21 +207,21 @@ code {
       grid-area: Chat; }
   .App .component-container2 {
     display: grid;
+    position: relative;
     height: 47vh;
     grid-template-columns: 50% 50%;
     grid-template-areas: "Code Terminal"; }
     .App .component-container2 .Code-display {
+      grid-column: span 6;
       position: relative;
       height: 100%;
-      width: 100%;
       grid-area: Code; }
     .App .component-container2 .Terminal-display {
+      grid-column: span 6;
       position: relative;
-      height: 100%;
-      width: 100%;
       display: flex;
-      grid-area: Terminal;
-      background-color: grey; }
+      min-width: 100vw;
+      grid-area: Terminal; }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
