--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -31,8 +31,9 @@ code {
 
 .App {
   flex-direction: column;
-  height: 80vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
+  overflow: hidden;
   // background-color: black;
 
   .component-container1 {
@@ -67,25 +68,25 @@ code {
 
   .component-container2 {
     display: grid;
+    position: relative;
     height: 47vh;
     grid-template-columns: 50% 50%;
     grid-template-areas:
       "Code Terminal";
 
     .Code-display {
+      grid-column: span 6;
       position: relative;
       height: 100%;
-      width: 100%; 
       grid-area: Code;
     }
 
     .Terminal-display {
+      grid-column: span 6;
       position: relative;
-      height: 100%;
-      width: 100%; 
       display: flex;
+      min-width: 100vw;
       grid-area: Terminal;
-      background-color: grey;
     }
   }
 }
