--- a/client/src/styles/scss/partials/_fileViewer.scss
+++ b/client/src/styles/scss/partials/_fileViewer.scss
@@ -1,13 +1,23 @@
 .file-container {
   display: flex;
   flex-direction: column;
+  min-height: 100%;
+
+  .react-codemirror2 {
+    position: relative;
+    min-height: 100%;
+
+    .CodeMirror {
+      min-height: 40vh;
+    }
+  }
 
   .theme-select-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    height: 8vh;
     background-color: rgba(0,0,0,0.6);
     
     .select-text {
