--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -247,48 +247,74 @@ code {
   width: 800px;
   height: 600px;
   background-color: lightgrey; }
-  .electron .scheduledStreamCard {
-    width: 90%;
-    height: 8%;
+  .electron .dashboard {
     display: flex;
-    justify-content: space-between;
-    border: 2px solid black;
-    margin: 1em 0;
-    align-items: center; }
-    .electron .scheduledStreamCard p {
-      font-size: 1.5em; }
-    .electron .scheduledStreamCard div {
-      display: inline-flex; }
-      .electron .scheduledStreamCard div .date-time {
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 100%; }
+    .electron .dashboard .header {
+      height: 35%;
+      justify-content: center;
+      align-items: center; }
+      .electron .dashboard .header .image-placeholder {
+        width: 50px;
+        height: 50px;
+        margin: .5em;
+        background-color: black; }
+      .electron .dashboard .header .stream-controls {
         display: flex;
-        flex-direction: column; }
-        .electron .scheduledStreamCard div .date-time #date {
-          font-size: 1em;
-          display: block;
-          margin: 0; }
-        .electron .scheduledStreamCard div .date-time #time {
-          font-size: 1em;
-          display: block;
-          margin: 0; }
-    .electron .scheduledStreamCard .controls {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly; }
-      .electron .scheduledStreamCard .controls #edit-btn {
-        background-color: skyblue;
-        padding: 3px;
-        font-size: 1em; }
-        .electron .scheduledStreamCard .controls #edit-btn:hover {
-          background: rgba(0, 0, 0, 0);
-          color: #3a7999;
-          box-shadow: inset 0 0 0 3px #3a7999; }
-      .electron .scheduledStreamCard .controls #delete-btn {
-        background-color: darkred;
-        padding: 3px;
-        font-size: 1em; }
-        .electron .scheduledStreamCard .controls #delete-btn:hover {
-          background: rgba(0, 0, 0, 0);
-          color: #3a7999;
-          box-shadow: inset 0 0 0 3px #3a7999; }
+        justify-content: center;
+        border: 2px solid black;
+        padding: 1em 2em; }
+        .electron .dashboard .header .stream-controls #instant {
+          margin: .5em; }
+        .electron .dashboard .header .stream-controls #scheduleNew {
+          margin: .5em; }
+    .electron .dashboard .streams {
+      height: 65%; }
+      .electron .dashboard .streams .scheduledStreamCard {
+        width: 90%;
+        height: 15%;
+        display: flex;
+        justify-content: space-between;
+        border: 2px solid black;
+        margin: 1em 0;
+        align-items: center; }
+        .electron .dashboard .streams .scheduledStreamCard p {
+          font-size: 1.5em; }
+        .electron .dashboard .streams .scheduledStreamCard div {
+          display: inline-flex; }
+          .electron .dashboard .streams .scheduledStreamCard div .date-time {
+            display: flex;
+            flex-direction: column; }
+            .electron .dashboard .streams .scheduledStreamCard div .date-time #date {
+              font-size: 1em;
+              display: block;
+              margin: 0; }
+            .electron .dashboard .streams .scheduledStreamCard div .date-time #time {
+              font-size: 1em;
+              display: block;
+              margin: 0; }
+        .electron .dashboard .streams .scheduledStreamCard .controls {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly; }
+          .electron .dashboard .streams .scheduledStreamCard .controls #edit-btn {
+            background-color: skyblue;
+            padding: 3px;
+            font-size: 1em; }
+            .electron .dashboard .streams .scheduledStreamCard .controls #edit-btn:hover {
+              background: rgba(0, 0, 0, 0);
+              color: #3a7999;
+              box-shadow: inset 0 0 0 3px #3a7999; }
+          .electron .dashboard .streams .scheduledStreamCard .controls #delete-btn {
+            background-color: darkred;
+            padding: 3px;
+            font-size: 1em; }
+            .electron .dashboard .streams .scheduledStreamCard .controls #delete-btn:hover {
+              background: rgba(0, 0, 0, 0);
+              color: #3a7999;
+              box-shadow: inset 0 0 0 3px #3a7999; }
 
 /*# sourceMappingURL=App.css.map */
