--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -136,8 +136,9 @@ code {
 
     .header {
       height:35%;
-      
+      display:flex;
       justify-content: center;
+      flex-direction: column;
       align-items: center;     
 
       .image-placeholder{
@@ -152,6 +153,7 @@ code {
         justify-content: center;
         border: 2px solid black;
         padding: 1em 2em;
+        width: 60%;
 
         #instant {
           margin: .5em;
