--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -177,7 +177,8 @@ code {
         align-items: center;
 
         p{
-          font-size: 1.5em;;
+          font-size: 1.5em;
+          height:20%;
         }
         div {
           display:inline-flex;
