--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -161,10 +161,15 @@ main .currentStream {
   position: relative;
   display: flex;
   flex-wrap: nowrap; }
+  .wrapper div.xterm-screen {
+    min-width: 50vw;
+    min-height: 47vh; }
   .wrapper canvas[class^="xterm-"] {
     display: flex;
     min-width: 50vw !important;
     min-height: 48vh; }
+  .wrapper canvas.xterm-text-layer, .wrapper canvas.xterm-cursor-layer {
+    padding: 0.5rem 3rem 1rem 2rem; }
 
 html {
   box-sizing: border-box;
