--- a/client/src/styles/scss/App.scss
+++ b/client/src/styles/scss/App.scss
@@ -302,10 +302,69 @@ code {
     }
   } // new-stream
   .start-scheduled {
+    height: 100%;
 
+    .header {
+      height:20%;
+
+      display: flex;
+      justify-content: center;
+
+      .dashboard-btn {
+        
+      }
+      .logoPlaceholder {
+        width: 50px;
+        height: 50px;
+        background-color:black;
+      }
+    }
+    .main-container{
+      height: 60%;
+      border: 2px solid black;
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      div {
+        h1{
+          font-size: 2em;
+        }
+        p {
+          font-size: 1em;
+        }
+      }
+      .forms-container{
+        
+        
+      }
+    }
   }
 } //electron
 
 // delete me
 
- 
+// <main className="start-scheduled">
+  // <header className="header">
+  //   <Button id="dashboard-btn" type="primary">Dashboard</Button>
+  //   <div className="logoPlaceholder">p</div>
+  // </header>
+  // <div className="main-container">
+  //   <div>
+  //    <h1>{this.state.title}</h1>
+  //    <p>{this.state.description}</p>
+  //  </div>
+
+//   <div className="forms-container">
+//     <form onSubmit={this.HandleSubmit}>
+
+//         <div className="youtube-container">
+//           <h3>YouTube URL:</h3>
+//           <input type="text" placeholder="https://www.youtube.com/channel/PLACEHOLDER" onChange={this.YoutubeUrlInput} />
+//         </div>
+//         <input type="submit" value="Go live!" />
+//     </form>
+//   </div>
+// </div>
+// </main>
