--- a/client/src/styles/css/App.css
+++ b/client/src/styles/css/App.css
@@ -346,5 +346,30 @@ code {
     .electron .new-stream .inputs-container .forms-container form .bottom-container {
       display: inline-flex;
       justify-content: space-between; }
+  .electron .start-scheduled {
+    height: 100%; }
+    .electron .start-scheduled .header {
+      height: 20%;
+      display: flex;
+      justify-content: center; }
+      .electron .start-scheduled .header .logoPlaceholder {
+        width: 50px;
+        height: 50px;
+        background-color: black; }
+    .electron .start-scheduled .main-container {
+      height: 60%;
+      border: 2px solid black;
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      .electron .start-scheduled .main-container div h1 {
+        font-size: 2em; }
+      .electron .start-scheduled .main-container div p {
+        font-size: 1em; }
+      .electron .start-scheduled .main-container .forms-container .form {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly; }
 
 /*# sourceMappingURL=App.css.map */
